[tool.poetry]
name = "hundredday"
version = "0.1.0"
description = ""
authors = ["Andrew Alderfer <drew@drewalderfer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"


[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "./.ipynb_checkpoints",
]
venvPath = "/home/drew/.cache/pypoetry/virtualenvs"
venv = "hundredday-CLcuTn1H-py3.11"

reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
